# SimpleNLP

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: simple_nlp.h
src/: main.cpp  simple_nlp.cpp
